# Typedown

./: .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  DEMO_SCRIPT.md  GEMINI.md  README.md  README.zh-CN.md  README_ZH.md  SOP.md  debug_env.py  deploy-check.sh  package-lock.json  package.json  pyproject.toml  zed_settings_fix.json
.claude-plugin/: marketplace.json
.github/workflows/: deploy-website.yml  publish-ovsx.yml  publish-pypi.yml  vscode-extension.yml
.monoco/: config.yaml  project.yaml  workspace.yaml
Issues/Domains/: DOM-0001-compiler-core.md  DOM-0002-ide-services.md  DOM-0003-ecosystem.md  DOM-0004-governance.md
Memos/: inbox.md
PoCs/egi/: README.td
commands/: 02-web-check.md  03-pre-release.md  04-release.md  README.md
cookbook/: README.md
dev-docs_zh/logs/: 2025-12-11.md  2025-12-16.md
docs/: 00-核心理念.md  error-codes.md  index.md
docs/.vitepress/: config.mts
docs/01-语法/: 02-引用.md
docs/01_getting-started/: 01_index.md  02_tutorial.md
docs/02-语义/: 01-演变语义.md
docs/02_compiler/: 01_architecture.md  02_cli.md  config.td
docs/02_concepts/: 01_model-and-entity.md  (+3 more)
scripts/: fix-fenced-code.js  publish_ovsx.sh  run-integration-tests.sh  sync_content.py
specs/: README.md
specs_zh/: README.md
test/: README.md
test_project/: lint_test.td
tests/: IMPLEMENTATION_GAP_REPORT.md  README.md  __init__.py  conftest.py
typedown/: main.py
website/: GEMINI.md  content_sync.yaml  docs_zh  index.md  next.config.ts  package-lock.json  package.json
(+505 files in other folders)
