[project]
name = "typedown"
version = "0.1.0"
description = "Progressive Formalization for Markdown using Pydantic and Pytest"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "python-frontmatter>=1.0.0",
    "markdown-it-py>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
server = [
    "pygls>=1.0.0",
]

[project.scripts]
td = "typedown.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["typedown"]
